@@ -1,3 +1,8 @@
+2015-08-06  Carl Hetherington  <cth@carlh.net>
+
+	* Make dcpomatic_create assign a default name if none
+	is specified.  Fix dcpomatic_create help.
+
 2015-08-05  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.35 released.
